--- a/styles.css
+++ b/styles.css
@@ -625,14 +625,14 @@ a {
 }
 
 .main-hero-text p {
-    font-size: 2.5rem;
+    font-size: 2rem;
     line-height: 1.2;
     padding: 0.5rem 15rem 0 5rem;
     margin: 1rem 0 2rem 0;
 }
 
 .main-hero-button {
-    font-size: 2.5rem;
+    font-size: 2rem;
     margin: 2rem 5rem;
     padding: 0.5rem 1.5rem;
     background-color: rgb(98, 45, 134);
@@ -966,7 +966,7 @@ a {
     transition: transform 0.3s;
 }
 .card h2{
-    font-size: 5rem;
+    font-size: 3rem;
 }
 .card p{
     font-size: 2.5rem;
@@ -1039,7 +1039,7 @@ a {
         padding: 0 1rem;
     }
     .cta-cards p{
-        font-size: 2.5rem;
+        font-size: 2rem;
     }
     .cta-cards a {
         font-weight: 400; 
@@ -1190,7 +1190,7 @@ a {
         font-size: 3rem;
     }
     .conocenos-text p{
-        font-size: 2.5rem;
+        font-size: 2rem;
         line-height: 1;
         padding: 0 4rem 0 0;
     }
@@ -1201,7 +1201,7 @@ a {
 
     .conocenos-text .cta-button {
         padding: 0.5rem 1rem;
-        font-size: 2.5rem;
+        font-size: 2rem;
         text-decoration: none;
         border-radius: 5px;
         font-weight: 900;
@@ -1627,11 +1627,11 @@ a {
 }
 
 .blog-filters label {
-    font-size: 2.5rem;
+    font-size: 2rem;
     margin-right: 0.5rem;
 }
 .blog-filters option {
-    font-size: 2.5rem;
+    font-size: 2rem;
     margin-right: 0.5rem;
 }
 
@@ -1950,7 +1950,7 @@ a {
 
 .hero-sumate p{
     text-align: left;
-    font-size: 2.5rem;
+    font-size: 2rem;
     align-items: left;
 }
 /* Line of Work Section */
@@ -1974,7 +1974,7 @@ a {
 }
 
 .line-of-work p {
-    font-size: 2.5rem;
+    font-size: 2rem;
     margin: 2rem 0;
 }
 
@@ -2331,7 +2331,7 @@ a {
     color: white;
     border: none;
     border-radius: 5px;
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-weight: 400;
     cursor: pointer;
     transition: background-color 0.3s ease;
@@ -2785,16 +2785,26 @@ a {
     flex-direction: column;
     padding: 20px;
 }
+/* Back Side */
+.flip-card .consumo p{
+    font-size: 2rem; 
+    color: rgb(167, 187, 64);
+}
+.flip-card .activismo p{
+    font-size: 2rem; 
+    color: rgb(98, 45, 134);
 
+}
+.flip-card .formacion p{  
+    font-size: 2rem; 
+    color: rgb(255, 128, 128);
+}
 /* Text Styles */
 .flip-card h3 {
     font-size: 1.7rem;
     margin-bottom: 10px;
 }
 
-.flip-card p {
-    font-size: 1.5rem;
-}
 
 /* CTA Button */
 .flip-card .cta-button {
@@ -3096,10 +3106,10 @@ a {
 }
 
 .hero-intervenciones h1{
-    font-size: 5rem;
+    font-size: 3rem;
 }
 .hero-intervenciones p{
-    font-size: 2.5rem;
+    font-size: 2rem;
 }
 .filters {
     display: flex;
@@ -3112,7 +3122,7 @@ a {
 .filters button{
     min-height: auto;
     font-family: 'Gill Sans Nova', sans-serif !important;    
-    font-size: 2.5rem;
+    font-size: 2rem;
 }
 .interventions {
     margin: 2rem 0;
@@ -3123,7 +3133,7 @@ a {
 /* Styling for the Interventions Section Title */
 .interventions-title {
     text-align: left; /* Centers the title */
-    font-size: 5rem;
+    font-size: 3rem;
     margin-bottom: 1rem; /* Adds space between the title and the container */
     color: black;
 }
@@ -3593,17 +3603,43 @@ a {
 /*//////////////////////////// CALENDARIO //////////////////////////////*/
 
 #calendar-container {
+    margin: 2rem 0;
     text-align: center;
-    padding: 10rem;
+    padding: 5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+#calendar-container h1{
+    margin: 2rem 0;
+}
 
+#calendar-grid {
+    display: flex;
+}
+.year-column,
+.month-column,
+.event-column {
+    flex: 1;
+    margin: 0 10px;
+}
+
+/* Start with the month and event columns hidden */
+.month-column ,
+.event-column {
+    opacity: 0;
+    transition: opacity 1.5s ease;
+}
+
+/* When the column has the 'show' class, it becomes visible */
+.month-column.show,
+.event-column.show {
+    opacity: 1;
+}
 .year-button, .month-button {
     display: block;
-    width: 30vw;
-    margin: 1rem;
+    min-width: 20vw;
+    margin: 1rem 0;
     padding: 1rem;
     font-size: 2rem;
     font-family: 'Gill Sans Nova', sans-serif;
@@ -3612,7 +3648,7 @@ a {
     color: white;
     border: none;
     border-radius: 5px;
-    transition: background 0.5s;
+    transition: 2s;
 }
 
 .year-button:hover, .month-button:hover {
@@ -3629,27 +3665,22 @@ a {
 }
 
 .calendar-event {
+    min-width: 12rem;
+    height: auto;
     background-color: #f9f9f9;
-    padding: 10px;
-    margin: 5px 0;
-    border-left: 5px solid #4CAF50;
+    padding: 1.5rem 3.5rem;
+    margin: 2rem 0 0 0;
     border-radius: 5px;
 }
-
+.calendar-event h3{
+    font-size: 1.5rem;
+}
+.calendar-event p{
+    font-size: 1.5rem;
+}
 .events-container {
     margin-left: 20px;
     padding-left: 10px;
-    border-left: 2px dashed #4CAF50;
-}
-
-/* 
-@media (max-width: 1028px) {
-    .calendar-event h3{
-        font-size: 2.5rem;
-    }
-    .calendar-event p{
-        font-size: 1.5rem;
-    }
 }
 
 /* Styling for smoother background */
@@ -3700,11 +3731,11 @@ a {
 }
 .cards-full .text-cards h2{
     color:#622d86;
-    font-size: 5rem;
+    font-size: 3rem;
     margin: 1rem 0;
 }
 .cards-full .text-cards p{
-    font-size: 2.5rem;
+    font-size: 2rem;
 }
 
 .cards-full img{
@@ -3765,7 +3796,7 @@ a {
         margin: 1rem 0 1rem 0;
     }
     .cards-full .text-cards h2{
-        font-size: 2.5rem;
+        font-size: 2rem;
     }
     .cards-full img{
         border-radius: 15%;
