--- a/styles.css
+++ b/styles.css
@@ -648,16 +648,16 @@ a {
 
 /* Image Styling */
 .main-hero-image {
-    min-width: 100vw;
-    height: auto;
+    max-width: 100vw;
+    max-height: auto;
     background-color: #D9A9FB;
     padding: 4rem 0;
     margin: 2rem 0;
     align-content: center;
 }
 .main-hero-image img {
-    width: 100vw;
-    height: auto;
+    max-width: 100vw;
+    max-height: 150vh;
     margin: 4rem 0 4rem 0;
     border-radius: 10%;
     padding: 2rem 3rem;
@@ -960,7 +960,7 @@ a {
     border-radius: 15px;
     width: 40vw;
     height: auto;
-    padding: 2.5rem;
+    padding: 2.5rem 4rem;
     text-align: left;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s;
@@ -969,7 +969,7 @@ a {
     font-size: 3rem;
 }
 .card p{
-    font-size: 2.5rem;
+    font-size: 2rem;
 }
 .cta-cards {
     padding: 0 4rem;
@@ -1621,22 +1621,29 @@ a {
 }
 .blog-filters {
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
     gap: 1rem;
     margin-bottom: 2rem;
 }
 
 .blog-filters label {
-    font-size: 2rem;
+    min-width: auto;
+    margin: 1rem 0;
+    font-size: 1.5rem;
     margin-right: 0.5rem;
 }
 .blog-filters option {
-    font-size: 2rem;
+    font-size: 1.5rem;
     margin-right: 0.5rem;
 }
 
 .blog-filters select,
 .blog-filters input {
+    display: flex;
+    flex-direction: row;
+    max-width: 8vw;
+    margin: 1rem 0;
     padding: 0.5rem;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -1658,6 +1665,15 @@ a {
 .blog-entry p.meta {
     font-size: 0.9rem;
     color: #888;
+}
+
+.entrada-blog h1{
+    padding: 10rem 0 0;
+    margin: 2rem 6rem 1rem 6rem;
+}
+.entrada-blog p{
+    font-size: 2rem;
+    margin: 1rem 6rem 1rem 6rem;
 }
 
 @media (max-width: 767px) {
@@ -3713,6 +3729,8 @@ a {
 
 .cards-full {
     background-color: white;
+    min-height: 50vh;
+    padding: 4rem 3rem 4rem 4rem;
 }
 
 .conocenos-full {
@@ -3721,10 +3739,6 @@ a {
 
 .visitanos-section {
     background-color: #FF8080;
-}
-.cards-full {
-    min-height: 50vh;
-    padding: 4rem 3rem 4rem 4rem;
 }
 .cards-full .text-cards {
     margin: 2rem 2rem;
@@ -3741,6 +3755,7 @@ a {
 .cards-full img{
     border-radius: 15%;
     max-width: 95vw;
+    max-height: 150vh;
     padding: 2rem 1rem 2rem 0rem;
 }
 
