--- a/styles.css
+++ b/styles.css
@@ -602,6 +602,9 @@ a {
     background-color: white;
     min-width: 100vw;
 }
+.main-hero.container {
+    padding:0;
+}
 
 .main-hero-content {
     display: flex;
@@ -636,14 +639,14 @@ a {
     margin: 2rem 5rem;
     padding: 0.5rem 1.5rem;
     background-color: rgb(98, 45, 134);
-    color: rgb(166, 120, 197);
+    color: white;
     border-radius: 5px;
     text-decoration: none;
 }
 
 .main-hero-button:hover {
     background-color: rgb(200, 151, 233);
-    color: rgb(98, 45, 134);
+    color: white;
 }
 
 /* Image Styling */
@@ -716,11 +719,6 @@ a {
         font-size: 2rem;
         margin: 1rem;
     }
-    
-    .main-hero-button:hover {
-        background-color: rgb(200, 151, 233);
-        color: rgb(98, 45, 134);
-    }
 
     .main-hero-image{
         margin: 0;
@@ -776,15 +774,8 @@ a {
         font-size: 2rem;
         margin: 1rem;
         padding: 0.5rem 0.5rem;
-        background-color: rgb(98, 45, 134);
-        color: rgb(166, 120, 197);
         border-radius: 5px;
         text-decoration: none;
-    }
-    
-    .main-hero-button:hover {
-        background-color: rgb(200, 151, 233);
-        color: rgb(98, 45, 134);
     }
 
     .main-hero-image {
@@ -827,40 +818,39 @@ a {
     }
     .main-hero-text {
         max-width: 100vw;
-        margin: 2.5rem 5rem 1rem 4.5rem;
-        padding: 0 2rem;
+        margin: 4rem 0 0 0;
+        padding: 0;
         text-align: justify;
     }
     .main-hero-text h1 {
         text-align: left;
         padding: 0;
-        margin: 0 0 1rem 0;
+        margin: 0 0 1rem 2rem;
         line-height: 3.5rem;
-        font-size: 2.5rem; /* Further reduce font size */
+        font-size: 2rem; /* Further reduce font size */
     }
 
     .main-hero-text p {
-        font-size: 1.7rem; /* Smaller font for extra small screens */
+        font-size: 1.5rem;
+        font-weight: 1; /* Smaller font for extra small screens */
         line-height: 2rem;
         padding: 0px;
-        margin: 0 0 2rem 0;
+        margin: 1rem 0 0 2rem;
         text-align: left;
     }
 
+    .main-hero-button-container {
+        margin: 3rem 0 1rem 2rem;
+    }
+
     .main-hero-button {
-        font-size: 1.5rem;
         margin: 0;
-        padding: 0.5rem 1rem;
-        background-color: rgb(98, 45, 134);
-        color: rgb(166, 120, 197);
+        padding: 0.7rem;
+        font-size: 1.5rem;
         border-radius: 5px;
         text-decoration: none;
     }
     
-    .main-hero-button:hover {
-        background-color: rgb(200, 151, 233);
-        color: rgb(98, 45, 134);
-    }
     .main-hero-social-container {
         display: flex;
         gap: 1rem;
@@ -888,14 +878,13 @@ a {
     .main-hero-image {
         max-width: 100vw;
         min-height: 30vh;
-        background-color: #D9A9FB;
-        padding: 1rem 0.25rem 2rem 0.35rem;
-        margin: 0;
+        padding: 1rem 0 2rem 0;
+        margin: 0 0 2rem 0;
 
     }
     .main-hero-image img {
         min-width: 95vw;
-        padding: 0 0.5rem 0 0;
+        padding: 0 0.25rem;
     }
 }
 @media (max-width: 380px) { /* Specific to XS */
@@ -992,20 +981,20 @@ a {
 
 /* Specific Border Colors */
 .activismo {
-    background-color:rgba(98, 45, 134, 0.6);
+    background-color:rgba(98, 45, 134, 0.4);
 }
 .activismo h3{
     color: rgb(98, 45, 134) ;
 }
 
 .formacion {
-    background-color:rgba(255, 128, 128, 0.6);
+    background-color:rgba(255, 128, 128, 0.4);
 }
 .formacion h3{
     color: rgb(255, 128, 128);
 }
 .consumo {
-    background-color:rgba(167, 187, 64, 0.6);
+    background-color:rgba(167, 187, 64, 0.4);
 }
 .consumo h3{
     color: rgb(167, 187, 64);
@@ -1052,7 +1041,6 @@ a {
         gap: 1rem; /* Reduce gap between cards */
         padding: 3rem 0 2rem 0; /* Adjust padding for smaller screens */
     }
-
     .card {
         width: 15rem; /* Reduce card width for smaller screens */
         height: auto; /* Allow height to adjust automatically */
@@ -1063,18 +1051,15 @@ a {
 }
 
 @media (max-width: 480px) {
-
     .text-cards {
         margin: 0;
         padding: 0;
     }
-
     .text-cards h1{        
         text-align: left;
         padding: 0 0 2rem 0;
         color:#622d86;
     }
-    
     .text-cards p{
         text-align: left;
         font-size: 1.3rem;
@@ -1085,13 +1070,12 @@ a {
         flex-direction: column;
         overflow-x: hidden;
     }
-
     .card {
         width: 90vw;
         height: auto; /* Smaller card width for XS */
         margin: 1rem 0;
+        padding: 1rem 2rem 1rem 1rem;
     }
-
     .card h3{
         font-size: 2rem;
     }
@@ -1099,8 +1083,8 @@ a {
         font-size: 2rem;
     }
     .card p{
-        padding: 1rem 3rem 1rem 0;
-        font-size: 1.7rem;
+        padding: 1rem 0;
+        font-size: 1.5rem;
     }
     .cta-cards {
         padding: 0 2rem;
@@ -1149,7 +1133,7 @@ a {
 .conocenos-text .cta-button {
     padding: 1rem 1.5rem;
     background-color: rgb(167, 187, 64);
-    color: rgb(198, 214, 120);
+    color: white;
     font-size: 2rem;
     text-decoration: none;
     border-radius: 5px;
@@ -1159,7 +1143,7 @@ a {
 
 .conocenos-text .cta-button:hover {
     background-color: rgba(167, 187, 64, 0.6);
-    color: rgb(104, 121, 23);
+    color: white;
 }
 
 /* Right Side: Image Styling */
@@ -1254,9 +1238,8 @@ a {
     }
     .conocenos-text p{
         padding: 0 1rem 0 0;
-        font-size: 2rem;
+        font-size: 1.5rem;
     }
-
     .conocenos-image img {
         max-width: 300px; /* Adjust for smaller screens */
     }
@@ -1266,7 +1249,7 @@ a {
         font-size: 1.5rem;
         text-decoration: none;
         border-radius: 5px;
-            font-weight: 900;
+        font-weight: 500;
         transition: background-color 0.3s;
     }
 }
@@ -1321,7 +1304,7 @@ a {
     font-size: 2rem;
     padding: 0.7rem 1.5rem;
     background-color: rgb(255, 128, 128);
-    color: rgb(255, 191, 191);
+    color: white;
     text-decoration: none;
     border-radius: 5px;
     font-weight: 900;
@@ -1330,7 +1313,7 @@ a {
 
 .contactanos-text .cta-button:hover {
     background-color: rgb(255, 204, 204);
-    color: rgb(255, 128, 128);
+    color: white;
 }
 @media (max-width: 1028px) {
     .contactanos-section {
@@ -1407,7 +1390,7 @@ a {
     }
 
     .contactanos-text {
-        margin: 2rem 0;
+        margin: 2rem 0 1rem 0;
         padding: 0 3rem 0 2rem;
     }
     .contactanos-text h2{
@@ -1422,7 +1405,7 @@ a {
         padding: 0.7rem 1.5rem;
         text-decoration: none;
         border-radius: 5px;
-        font-weight: 900;
+        font-weight: 500;
         font-size: 1.5rem;
         transition: background-color 0.3s;
     }
@@ -1664,7 +1647,7 @@ a {
 
 .blog-entry p.meta {
     font-size: 0.9rem;
-    color: #888;
+    color: #e3e2e2;
 }
 
 .entrada-blog h1{
@@ -1674,6 +1657,9 @@ a {
 .entrada-blog p{
     font-size: 2rem;
     margin: 1rem 6rem 1rem 6rem;
+}
+.entrada-blog .referencias {
+    background-color: #ebebeb;
 }
 
 @media (max-width: 767px) {
@@ -1711,6 +1697,25 @@ a {
     .blog-entry p.meta {
         font-size: 1.5rem;
         margin-bottom: 0.5rem;
+    }
+    .entrada-blog {
+        padding: 0;
+        margin: 0;
+    }
+    .entrada-blog h1{
+        font-size: 2rem;
+        padding: 0;
+        margin: 6rem 1rem 0 2rem;
+    }
+    .entrada-blog p{
+        font-size: 1.5rem;
+        padding: 0 0 1rem 0;
+        margin: 1rem 1rem 0 2rem;
+    }
+    .entrada-blog .referencias {
+        font-size: 1.5rem;
+        padding: 2rem;
+        margin: 0;
     }
 }
 /*//////////////////////////////// DONATE ////////////////////////////////////////*/
@@ -2113,18 +2118,19 @@ a {
     .hero-sumate {
         min-height: 30vh;
         display: flex;
+        margin: 6rem 0 0 0;
         flex-direction: column;
         align-items: left;
     }
     .hero-sumate h1{
         font-size: 2rem;
-        margin: 1rem 0;
+        margin: 0;
         padding: 0;
         align-items: left;
     }
     .hero-sumate p{
         font-size: 1.5rem;
-        margin: 0.5rem 0;
+        margin: 1rem 0;
         padding: 0;
         align-items: left;
     }
@@ -2137,7 +2143,7 @@ a {
     .line-of-work h2{
         align-items: left;
         font-size: 2rem;
-        margin-bottom: 1rem;
+        margin-bottom: 0;
     }
 
     .line-of-work p{
@@ -2490,6 +2496,7 @@ a {
 
 .hero-activismo h1{
     font-size: 3rem;
+    color: rgb(98, 45, 134);
 }
 .hero-activismo p{
     font-size: 2rem;
@@ -2499,6 +2506,7 @@ a {
 .hero-activismo a{
     padding: 1rem 0.5rem;
     font-size: 2rem;
+    color:white;
 }
 /*////////////////////// ACTIVISMO CAROUSEL /////////////////////////////////////
 /* General Layout */
@@ -2594,13 +2602,13 @@ a {
     margin: 1rem 0rem;
     padding: 1rem 2rem 1rem 1rem;
     background-color: rgb(98, 45, 134);
-    color: rgb(166, 120, 197);
+    color: white;
     border-radius: 5px;
     text-decoration: none;
 }
 .cta-button-activismo:hover {
     background-color: rgb(180, 131, 212);
-    color: rgb(93, 7, 150);
+    color: white;
 }
 
 /* Responsive Design */
@@ -2612,7 +2620,6 @@ a {
     }
     .hero-activismo h1{
         font-size: 3rem;
-        color: rgb(98, 45, 134);
     }
     .hero-activismo p{
         font-size: 2rem;
@@ -2698,6 +2705,24 @@ a {
     .hero-activismo a{
         font-size: 1.8rem;
     }
+    .topic-section {
+        margin: 1rem 0 0 0;
+    }
+    .topic-section h2{
+        margin: 0 2rem;
+        font-size: 1.5rem;
+    }
+    .event-section {
+        margin: 1rem 0 0 0;
+    }
+    .event-section h3{
+        margin: 1rem 2rem;
+        font-size: 1.5rem;
+    }
+    .event-section p{
+        margin: 0 2rem 1rem 2rem;
+        font-size: 1.5rem;
+    }
     .cta-button-activismo {
         padding: 1rem 2rem;
         border-radius: 10px;
@@ -2736,14 +2761,14 @@ a {
 .cta-button-formacion {
     padding: 1rem 1rem 1rem 0.7rem;
     background-color: rgb(214, 128, 138);
-    color: rgb(255, 175, 185);
+    color: white;
     border-radius: 5px;
     text-decoration: none;
 }
 
 .cta-button-formacion:hover {
     background-color: rgba(214, 128, 138, 0.6);
-    color: rgb(184, 100, 110);
+    color: white;
 }
 
 /* Grid Layout */
@@ -3003,14 +3028,14 @@ a {
     margin: 2rem 0;
     padding: 2rem 1rem 1rem 0.5rem;
     background-color: rgb(167, 187, 64);
-    color: rgb(235, 252, 152);
+    color: white;
     border-radius: 5px;
     text-decoration: none;
 }
 
 .cta-button-consumo:hover {
     background-color: rgba(167, 187, 64, 0.6);
-    color: rgb(116, 131, 45);
+    color: white;
 }
 
 @media (max-width: 1028px) {
@@ -3421,8 +3446,6 @@ a {
     .about-text .cta-button {
         padding: 0.5rem 1rem;
         font-size: 1rem;
-        background-color: #D9A9FB;
-        color: white;
         text-decoration: none;
         border-radius: 5px;
         font-weight: 500;
@@ -3451,8 +3474,6 @@ a {
     .about-text .cta-button {
         padding: 0.5rem 1rem;
         font-size: 1rem;
-        background-color: #D9A9FB;
-        color: white;
         text-decoration: none;
         border-radius: 5px;
         font-weight: 500;
@@ -3602,7 +3623,7 @@ a {
     }
     .allies h2{
         margin: 1rem 0;
-        font-size: 2rem;
+        font-size: 1.5rem;
     }
     .allies-grid {
         margin: 1rem 0;
@@ -3610,7 +3631,13 @@ a {
     .allies-grid h3{
         font-size: 1.5rem;
     }
-    
+    .ally-card h3 {
+        font-size: 1.3rem;
+        margin-bottom: 0.5rem;
+    }
+    .ally-card p {
+        font-size: 1.2rem;
+    }
 }
 
 
@@ -3741,7 +3768,7 @@ a {
     background-color: #FF8080;
 }
 .cards-full .text-cards {
-    margin: 2rem 2rem;
+    margin: 0 2rem 2rem 2rem;
 }
 .cards-full .text-cards h2{
     color:#622d86;
@@ -3790,6 +3817,9 @@ a {
         justify-content: space-between;
         padding: 2.5rem 0 2rem 0;
     }
+    .cards-full {
+        padding: 0 0 2rem 0;
+    }
     .calendar-section {
         padding: 4rem 2rem
     }
@@ -3812,6 +3842,9 @@ a {
     }
     .cards-full .text-cards h2{
         font-size: 2rem;
+    }
+    .cards-full .text-cards p{
+        font-size: 1.5rem;
     }
     .cards-full img{
         border-radius: 15%;
@@ -3859,3 +3892,20 @@ font-size: 2rem;
             font-size: 2rem;
             }
     }
+
+/*//////////////////////// IMAGE ANIMATION ////////////////////////////////////////*/
+.hidden-image {
+    opacity: 0;
+    transform: scale(0);
+    clip-path: circle(0%);
+    transition: opacity 1s ease-out, transform 1.5s ease-out, clip-path 1.5s ease-out;
+    width: 100%;
+    display: block;
+}
+
+.visible-image {
+    opacity: 1;
+    transform: scale(1);
+    clip-path: circle(100%);
+}
+
